--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/outbrain/donatello#readme",
   "devDependencies": {
+    "@types/express": "^4.0.34",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
