--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     "strictNullChecks": true,
     "moduleResolution": "node",
     "sourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true
   },
   "files": [
     "src/bootstrap.ts"
