added typscript compiler

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "node_modules/.bin/tslint -c tslint.json 'src/**/*.ts'"
+    "lint": "node_modules/.bin/tslint -c tslint.json 'src/**/*.ts'",
+    "serve": "tsc --watch"
   },
   "repository": {
     "type": "git",
