--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^2.1.5"
   },
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "forever": "^0.15.3"
   }
 }
