--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "node_modules/.bin/tslint -c tslint.json 'src/**/*.ts'",
-    "serve": "tsc --watch",
+    "compile": "tsc --watch",
     "watch": "forever ./src/server.js --watch --watchDirectory ./dist"
   },
   "repository": {
