--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "typescript": "^2.1.5"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "forever": "^0.15.3"
+    "express": "^4.14.0"
   }
 }
