--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/outbrain/donatello#readme",
   "devDependencies": {
     "@types/express": "^4.0.34",
+    "body-parser": "^1.16.0",
     "nodemon": "^1.11.0",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5"
