--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
+    "@types/request": "0.0.39",
     "body-parser": "^1.16.0",
     "nodemon": "^1.11.0",
+    "request": "^2.79.0",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5"
   },
