--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
     "@types/request": "0.0.39",
+    "@types/winston": "2.2.0",
     "nodemon": "^1.11.0",
     "tslint": "^4.3.1",
     "typescript": "^2.1.5"
@@ -33,6 +34,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "request": "^2.79.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "winston": "^2.3.1"
   }
 }
