--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.34",
+    "@types/lodash": "^4.14.61",
     "@types/request": "0.0.39",
     "@types/winston": "2.2.0",
     "nodemon": "^1.11.0",
@@ -33,8 +34,9 @@
   },
   "dependencies": {
     "body-parser": "^1.16.0",
-    "request": "^2.79.0",
     "express": "^4.14.0",
+    "lodash": "^4.17.4",
+    "request": "^2.79.0",
     "winston": "^2.3.1"
   }
 }
